2018-07-02  Antoine Quint  <graouts@apple.com>

        [Web Animations] Crash in KeyframeEffectReadOnly::applyPendingAcceleratedActions()
        https://bugs.webkit.org/show_bug.cgi?id=187139

        Reviewed by Dean Jackson.

        Ensure we have a resolved time value before trying to use it.

        * animation/KeyframeEffectReadOnly.cpp:
        (WebCore::KeyframeEffectReadOnly::applyPendingAcceleratedActions):

2018-07-02  Youenn Fablet  <youenn@apple.com>

        Reject getUserMedia promise if capture fails
        https://bugs.webkit.org/show_bug.cgi?id=187190

        Reviewed by Eric Carlson.

        In case PendingActivationMediaStream is notified of a change,
        Check whether any track failed to capture.
        If so, reject the promise.
        Add more release logging in error case.

        Covered by manual testing.

        * Modules/mediastream/UserMediaRequest.cpp:
        (WebCore::UserMediaRequest::PendingActivationMediaStream::~PendingActivationMediaStream):
        (WebCore::UserMediaRequest::PendingActivationMediaStream::characteristicsChanged):
        (WebCore::UserMediaRequest::mediaStreamIsReady):
        (WebCore::UserMediaRequest::mediaStreamDidFail):
        * Modules/mediastream/UserMediaRequest.h:
        * platform/mediastream/MediaStreamPrivate.h:
        * platform/mediastream/RealtimeMediaSource.cpp:
        (WebCore::RealtimeMediaSource::captureFailed):
        * platform/mediastream/mac/AVVideoCaptureSource.mm:
        (WebCore::AVVideoCaptureSource::setupCaptureSession):

2018-07-01  Fujii Hironori  <Hironori.Fujii@sony.com>

        [WK2] fast/parser/document-open-in-unload.html makes the following test crash
        https://bugs.webkit.org/show_bug.cgi?id=98345
        <rdar://problem/12474923>

        Reviewed by Ryosuke Niwa.

        m_documentLoader can become null in the middle of
        FrameLoader::commitProvisionalLoad by stopping the loading.

        No new tests (Covered by existing tests).
