@@ -1,5 +1,17 @@
 2018-07-02  Antoine Quint  <graouts@apple.com>
 
+        Crash in WebCore::WebAnimation::timeToNextRequiredTick when running imported/w3c/web-platform-tests/web-animations/interfaces/Animatable/animate-no-browsing-context.html
+        https://bugs.webkit.org/show_bug.cgi?id=187145
+
+        Reviewed by Dean Jackson.
+
+        Ensure we have a resolved time value before trying to use it.
+
+        * animation/WebAnimation.cpp:
+        (WebCore::WebAnimation::timeToNextRequiredTick const):
+
+2018-07-02  Antoine Quint  <graouts@apple.com>
+
         [Web Animations] Crash in KeyframeEffectReadOnly::applyPendingAcceleratedActions()
         https://bugs.webkit.org/show_bug.cgi?id=187139
 
